--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ baseurl: '/the-true-story-of-lao-zhang'
 menu:
   - title: 首页
     url: /
-  # - title: 归类
-  #   url: /pages/categories.html
+  - title: 归类
+    url: /pages/categories.html
   - title: 搜索
     url: /pages/search.html
   # - title: 友链
